; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_cls_route.c_route4_dump.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_cls_route.c_route4_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcf_proto = type { i32 }
%struct.sk_buff = type { i32 }
%struct.tcmsg = type { i32 }
%struct.route4_filter = type { i32, i32, i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.nlattr = type { i32 }

@TCA_OPTIONS = common dso_local global i32 0, align 4
@TCA_ROUTE4_TO = common dso_local global i32 0, align 4
@TCA_ROUTE4_IIF = common dso_local global i32 0, align 4
@TCA_ROUTE4_FROM = common dso_local global i32 0, align 4
@TCA_ROUTE4_CLASSID = common dso_local global i32 0, align 4
@route_ext_map = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tcf_proto*, i64, %struct.sk_buff*, %struct.tcmsg*)* @route4_dump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @route4_dump(%struct.tcf_proto* %0, i64 %1, %struct.sk_buff* %2, %struct.tcmsg* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.tcf_proto*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.sk_buff*, align 8
  %9 = alloca %struct.tcmsg*, align 8
  %10 = alloca %struct.route4_filter*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.nlattr*, align 8
  %13 = alloca i32, align 4
  store %struct.tcf_proto* %0, %struct.tcf_proto** %6, align 8
  store i64 %1, i64* %7, align 8
  store %struct.sk_buff* %2, %struct.sk_buff** %8, align 8
  store %struct.tcmsg* %3, %struct.tcmsg** %9, align 8
  %14 = load i64, i64* %7, align 8
  %15 = inttoptr i64 %14 to %struct.route4_filter*
  store %struct.route4_filter* %15, %struct.route4_filter** %10, align 8
  %16 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %17 = call i8* @skb_tail_pointer(%struct.sk_buff* %16)
  store i8* %17, i8** %11, align 8
  %18 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %19 = icmp eq %struct.route4_filter* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %4
  %21 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %22 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %5, align 4
  br label %119

24:                                               ; preds = %4
  %25 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %26 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.tcmsg*, %struct.tcmsg** %9, align 8
  %29 = getelementptr inbounds %struct.tcmsg, %struct.tcmsg* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 4
  %30 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %31 = load i32, i32* @TCA_OPTIONS, align 4
  %32 = call %struct.nlattr* @nla_nest_start(%struct.sk_buff* %30, i32 %31)
  store %struct.nlattr* %32, %struct.nlattr** %12, align 8
  %33 = load %struct.nlattr*, %struct.nlattr** %12, align 8
  %34 = icmp eq %struct.nlattr* %33, null
  br i1 %34, label %35, label %36

35:                                               ; preds = %24
  br label %115

36:                                               ; preds = %24
  %37 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %38 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = and i32 %39, 32768
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %51, label %42

42:                                               ; preds = %36
  %43 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %44 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = and i32 %45, 255
  store i32 %46, i32* %13, align 4
  %47 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %48 = load i32, i32* @TCA_ROUTE4_TO, align 4
  %49 = load i32, i32* %13, align 4
  %50 = call i32 @NLA_PUT_U32(%struct.sk_buff* %47, i32 %48, i32 %49)
  br label %51

51:                                               ; preds = %42, %36
  %52 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %53 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = and i32 %54, -2147483648
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %57, label %71

57:                                               ; preds = %51
  %58 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %59 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = ashr i32 %60, 16
  %62 = icmp ne i32 %61, 65535
  br i1 %62, label %63, label %70

63:                                               ; preds = %57
  %64 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %65 = load i32, i32* @TCA_ROUTE4_IIF, align 4
  %66 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %67 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %66, i32 0, i32 2
  %68 = load i32, i32* %67, align 4
  %69 = call i32 @NLA_PUT_U32(%struct.sk_buff* %64, i32 %65, i32 %68)
  br label %70

70:                                               ; preds = %63, %57
  br label %80

71:                                               ; preds = %51
  %72 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %73 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %72, i32 0, i32 1
  %74 = load i32, i32* %73, align 4
  %75 = ashr i32 %74, 16
  store i32 %75, i32* %13, align 4
  %76 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %77 = load i32, i32* @TCA_ROUTE4_FROM, align 4
  %78 = load i32, i32* %13, align 4
  %79 = call i32 @NLA_PUT_U32(%struct.sk_buff* %76, i32 %77, i32 %78)
  br label %80

80:                                               ; preds = %71, %70
  %81 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %82 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %81, i32 0, i32 4
  %83 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %82, i32 0, i32 0
  %84 = load i32, i32* %83, align 4
  %85 = icmp ne i32 %84, 0
  br i1 %85, label %86, label %94

86:                                               ; preds = %80
  %87 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %88 = load i32, i32* @TCA_ROUTE4_CLASSID, align 4
  %89 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %90 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %89, i32 0, i32 4
  %91 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %90, i32 0, i32 0
  %92 = load i32, i32* %91, align 4
  %93 = call i32 @NLA_PUT_U32(%struct.sk_buff* %87, i32 %88, i32 %92)
  br label %94

94:                                               ; preds = %86, %80
  %95 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %96 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %97 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %96, i32 0, i32 3
  %98 = call i64 @tcf_exts_dump(%struct.sk_buff* %95, i32* %97, i32* @route_ext_map)
  %99 = icmp slt i64 %98, 0
  br i1 %99, label %100, label %101

100:                                              ; preds = %94
  br label %115

101:                                              ; preds = %94
  %102 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %103 = load %struct.nlattr*, %struct.nlattr** %12, align 8
  %104 = call i32 @nla_nest_end(%struct.sk_buff* %102, %struct.nlattr* %103)
  %105 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %106 = load %struct.route4_filter*, %struct.route4_filter** %10, align 8
  %107 = getelementptr inbounds %struct.route4_filter, %struct.route4_filter* %106, i32 0, i32 3
  %108 = call i64 @tcf_exts_dump_stats(%struct.sk_buff* %105, i32* %107, i32* @route_ext_map)
  %109 = icmp slt i64 %108, 0
  br i1 %109, label %110, label %111

110:                                              ; preds = %101
  br label %115

111:                                              ; preds = %101
  %112 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %113 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %112, i32 0, i32 0
  %114 = load i32, i32* %113, align 4
  store i32 %114, i32* %5, align 4
  br label %119

115:                                              ; preds = %110, %100, %35
  %116 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %117 = load i8*, i8** %11, align 8
  %118 = call i32 @nlmsg_trim(%struct.sk_buff* %116, i8* %117)
  store i32 -1, i32* %5, align 4
  br label %119

119:                                              ; preds = %115, %111, %20
  %120 = load i32, i32* %5, align 4
  ret i32 %120
}

declare dso_local i8* @skb_tail_pointer(%struct.sk_buff*) #1

declare dso_local %struct.nlattr* @nla_nest_start(%struct.sk_buff*, i32) #1

declare dso_local i32 @NLA_PUT_U32(%struct.sk_buff*, i32, i32) #1

declare dso_local i64 @tcf_exts_dump(%struct.sk_buff*, i32*, i32*) #1

declare dso_local i32 @nla_nest_end(%struct.sk_buff*, %struct.nlattr*) #1

declare dso_local i64 @tcf_exts_dump_stats(%struct.sk_buff*, i32*, i32*) #1

declare dso_local i32 @nlmsg_trim(%struct.sk_buff*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
